# fluera_engine

./: .gitignore  .pubignore  AGGIORNAMENTO_MOTORE_PDF.md  ARCHITECTURE.md  CHANGELOG.md  GETTING_STARTED.md  LAUNCH_POSTS.md  LICENSE  README.md  RTREE_OPTIMIZATION_PLAN.md  analysis_options.yaml  audit_gallery_e_sezioni.md  audit_ux.md  dartdoc_options.yaml  distill_log.txt  feature_nuove.md  fix_launch_beta.md  gpu_shaders.shaderbundle.json  guida_metodo_fluera.md  incoerenze_teoria_cognitiva.md  l10n.yaml  lancio_v1_strategia_e_scope.md  leggi_ui_ux.md  pubspec.yaml  smoke_test_beta.md  specifica_implementativa.md  teoria_cognitiva_apprendimento.md  test_results.txt  translate_batch.py  translate_comments.py  translate_fast.py
.agent/workflows/: dev.md
.github/workflows/: main.yml
LICENSES/: THIRD_PARTY_NOTICES.md
_phase2_disabled/: _cloud_sync.dart  _collaboration.dart  _export.dart  _navigation_pdf.dart  _voice_recording.dart  canvas_export_service.dart  export_area_selector.dart  multi_page_preview_overlay.dart  timelapse_export_dialog.dart  timelapse_export_service.dart
android/: build.gradle  settings.gradle
android/src/main/cpp/: CMakeLists.txt  rnnoise_jni.c  vk_compute_shader.h  vk_jni_bridge.cpp  vk_shaders.h  vk_stroke_renderer.cpp  vk_stroke_renderer.h  vk_transform_renderer.cpp  vk_transform_renderer.h
android/src/main/cpp/image/: vk_image_jni_bridge.cpp  vk_image_processor.cpp  vk_image_processor.h
android/src/main/cpp/rnnoise/src/: config.h
android/src/main/cpp/shaders/: image_filter.frag  image_filter.vert  image_filter_frag.spv  image_filter_shaders.h  image_filter_vert.spv  liquify.comp  smudge.comp  warp.comp
assets/dictionaries/: LICENSE.md  ar.txt  bg.txt  bn.txt  ca.txt  cs.txt  da.txt  de.txt  el.txt  en.bigrams.tsv  en.manifest.json  en.phrases.tsv  en.tsv  en.txt  es.txt  et.txt  fa.txt  fi.txt  fr.txt  he.txt  hi.txt  hr.txt  hu.txt  id.txt  it.txt  ja.txt  ko.txt  lt.txt  lv.txt  mr.txt  ms.txt  nl.txt  no.txt  pl.txt  pt.txt  ro.txt  ru.txt  sk.txt  sl.txt  sv.txt  (+10 more)
assets/thesaurus/: de.txt  en.txt  es.txt  fr.txt  it.txt  nl.txt  pt.txt
doc_guides/: SHARE_SETUP.md  cloud_sync_guide.md  emergent_organicity.md  realtime_collaboration_guide.md  storage_guide.md  voice_recording_guide.md
docs/: 10M_STROKE_OPTIMIZATIONS.md  1M_STROKE_OPTIMIZATIONS.md  NATIVE_NOTIFICATIONS.md  SHARE_SETUP.md  cloud_sync_guide.md  dezoom_tier_map.md  emergent_organicity.md  ghost_map_v1_session_log.md  looponia_global_pricing.csv  realtime_collaboration_guide.md  socratic_v3_telemetry.md  storage_guide.md  v1_manual_test_plan.md  voice_recording_guide.md
example/: README.md  pubspec.yaml
example/lib/: benchmark_page.dart  main.dart
example/test/: widget_test.dart
example/web/: index.html  manifest.json
hook/: build.dart
ios/: fluera_engine.podspec  nebula_engine.podspec
ios/Classes/: AudioPlayerPlugin.swift  AudioRecorderPlugin.swift  DisplayLinkPlugin.swift  FlueraEnginePlugin.swift  LatexRecognizerPlugin.swift  MetalStrokeOverlayPlugin.swift  MetalStrokeOverlayView.swift  MetalStrokeRenderer.swift  MetalTransformPlugin.swift  NebulaEnginePlugin.swift  NotificationPlugin.swift  PdfRendererPlugin.swift  PerformanceMonitorPlugin.swift  PredictedTouchPlugin.swift  PrintPlugin.swift  StrokeShaders.metal  StrokeShaders.metal.disabled  TorchModule.h  TorchModule.m  TransformShaders.metal.disabled  VibrationPlugin.swift
lib/: fluera_engine.dart  fluera_engine_internal.dart  fluera_engine_plugin.dart  nebula_engine.dart
lib/brush_testing/: brush_testing.dart
lib/controllers/: fluera_layer_controller.dart  nebula_layer_controller.dart
lib/models/: canvas_layer.dart  digital_text_element.dart  image_element.dart  pro_drawing_point.dart  shape_type.dart
lib/optimization/: spatial_index.dart
lib/testing/: brush_settings_dialog.dart  brush_test_canvas.dart  brush_test_painter.dart  brush_test_screen.dart  brush_test_toolbar.dart  brush_testing.dart  (+1 more)
linux/: CMakeLists.txt  fluera_engine_plugin.cc  gl_stroke_overlay_plugin.cc  gl_stroke_overlay_plugin.h  gl_stroke_renderer.cpp  gl_stroke_renderer.h
linux/include/fluera_engine/: fluera_engine_plugin.h
macos/: fluera_engine.podspec
native/: fluera_stroke_ffi.h
scripts/: convert_comer_onnx.py  convert_comer_ptl.py  convert_pix2tex_onnx.py  distill_from_pix2tex.py  hme_model.onnx  hme_model.py  hme_vocab.json  reexport_onnx.py  train_hme.py  train_hme_attention.py  train_hme_colab.py  train_hme_crohme.py  train_hme_fonts.py  train_hme_top_tier.py
shaders/: adjustment.frag  brush_stamp.frag  charcoal.frag  fluid_topology.frag  fountain_pen_pro.frag  gpu_texture_overlay.frag  gpu_texture_overlay.vert  ink_wash.frag  marker.frag  neon_glow.frag  oil_paint.frag  pencil_pro.frag  spray_paint.frag  stroke_compute.comp  stroke_compute.hlsl  stroke_compute.metal  stroke_compute.spv  stroke_compute.wgsl  texture_overlay.frag  watercolor.frag
shared/: ring_buffer.h  simd_math.h  stroke_tessellation.h  tessellation_thread.h  vertex_buffer_pool.h
tool/: bootstrap_chat_cells.dart  bootstrap_exam_cells.dart  bootstrap_exam_discipline_hints.dart  bootstrap_misconceptions.dart  bootstrap_pedagogy_cells.dart  gen_l10n.sh  generate_benchmark_db.dart
tool/dict/: .gitignore  BUILD.md  README.md  pyproject.toml
tool/dict/data/curated/: cs_terms_en.txt  exclude_en.txt  finance_terms_en.txt  include_en.txt  latin_phrases_en.txt  llm_ratings_en.tsv  sexual_en.txt  slurs_en.txt  stem_terms_en.txt
tool/dict/fluera_dict/: __init__.py  bigrams.py  build.py  cli.py  curate.py  emit.py  enrich.py  ingest.py  llm_ratings.py  normalize.py  phrases.py  validate.py
tool/dict/tests/: test_build.py
windows/: CMakeLists.txt  d3d11_stroke_overlay_plugin.cpp  d3d11_stroke_overlay_plugin.h  d3d11_stroke_renderer.cpp  d3d11_stroke_renderer.h  fluera_engine_plugin.cpp
windows/include/fluera_engine/: fluera_engine_plugin_c_api.h
(+1605 files in other folders)
